Font not loading on Safari browser fix

--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,16 @@
 @font-face {
   font-family: 'Montserrat-Regular';
-  src: url("../../assets/images/fonts/Montserrat-Regular.woff2") format("woff2"), url("../../assets/images/fonts/Montserrat-Regular.woff") format("woff");
+  src: url("../../assets/fonts/Montserrat-Regular.woff2") format("woff2"), url("../../assets/images/fonts/Montserrat-Regular.woff") format("woff");
 }
 
 @font-face {
   font-family: 'Montserrat-Bold';
-  src: url("../../assets/images/fonts/Montserrat-Bold.woff2") format("woff2"), url("../../assets/images/fonts/Montserrat-Bold.woff") format("woff");
+  src: url("../../assets/fonts/Montserrat-Bold.woff2") format("woff2"), url("../../assets/images/fonts/Montserrat-Bold.woff") format("woff");
 }
 
 @font-face {
   font-family: 'Satisfy-Regular';
-  src: url("../../assets/images/fonts/Satisfy-Regular.woff2") format("woff2"), url("../../assets/images/fonts/Satisfy-Regular.woff") format("woff");
+  src: url("../../assets/fonts/Satisfy-Regular.woff2") format("woff2"), url("../../assets/images/fonts/Satisfy-Regular.woff") format("woff");
 }
 
 h1,
