--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,25 +1,25 @@
 @font-face {
   font-family: 'Montserrat-Regular';
-  src:  url('../../assets/images/fonts/Montserrat-Regular.woff2') format('woff2'),
-        url('../../assets/images/fonts/Montserrat-Regular.woff') format('woff');
+  src:  url('../../assets/fonts/Montserrat-Regular.woff2') format('woff2'),
+        url('../../assets/fonts/Montserrat-Regular.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Montserrat-Bold';
-  src:  url('../../assets/images/fonts/Montserrat-Bold.woff2') format('woff2'),
-        url('../../assets/images/fonts/Montserrat-Bold.woff') format('woff');
+  src:  url('../../assets/fonts/Montserrat-Bold.woff2') format('woff2'),
+        url('../../assets/fonts/Montserrat-Bold.woff') format('woff');
 }
 
 @font-face {
   font-family: 'Satisfy-Regular';
-  src:  url('../../assets/images/fonts/Satisfy-Regular.woff2') format('woff2'),
-        url('../../assets/images/fonts/Satisfy-Regular.woff') format('woff');
+  src:  url('../../assets/fonts/Satisfy-Regular.woff2') format('woff2'),
+        url('../../assets/fonts/Satisfy-Regular.woff') format('woff');
 }
 
 // Font variables
 
-$main-font: 'Montserrat-Regular', sans-serif;
-$secondary-font: 'Satisfy-Regular', cursive;
+$main-font: 'Montserrat-Regular';
+$secondary-font: 'Satisfy-Regular';
 
 
 h1,
